Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/ParseConditional.out
ParseConditional.java:23:23: compiler.err.unexpected.type: kindname.variable, kindname.value
1 error
